# inhouse-ml-competition

./: .gitignore  Home.py  README.md  config.py  custom_settings.py  data_store.py  memo.md  pyproject.toml  requirements.txt  streamlit_app.py  utils.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
.streamlit/: secrets.toml.example
competition_builder/: marimo_competion_builder.py
competition_files/content/: home.md
competition_files/contents/: playground.py
competition_files/ground_truth/: ground_truth.csv
competition_files/playgroubd/: index_md_convert.py
competition_files/playgroubd/marimo/: sample.py
competition_files/playground/: index.md
competition_files/playground/Colab/: sample.ipynb
competition_files/playground/marimo/: sample.py
contents/: home.py  leaderboard.py  playground.py  problem.py  submit.py
dev_data/: generate_test_data.py  test_leaderboard_data.csv
for_admin/apps/: register_ground_truth_app.py  view_leaderboard_data_app.py
for_admin/scripts/: generate_cookie_secret.py  generate_email_hash_salt.py  generate_password_hash.py
for_dev/: generate_test_lb_data.py
pages/: 1_概要・データ.py  2_投稿.py  3_リーダーボード.py  4_playground.py  submit.py
scripts/: generate_cookie_secret.py  generate_password_hash.py  register_ground_truth.py  view_ground_truth_data.py  view_leaderboard_data.py
scripts/admin_apps/: register_ground_truth_app.py  view_ground_truth_data_app.py
